@@ -6,6 +6,7 @@ Revision history for Perl module Algorithm::LUHN
     - Renamed CHANGES to Changes and reformatted as per CPAN::Changes::Spec
     - Moved LUHN.pm to lib/Algorithm/LUHN.pm, as per convention
     - Switched to Dist::Zilla and set min perl version to 5.006
+    - Improved doc for is_valid(), in response to RT#43842
     - Added github repo to pod
 
 1.00 2002-03-26 TAYERS
